fix button icon alignment

--- a/less/style/mixins/button.less
+++ b/less/style/mixins/button.less
@@ -14,7 +14,7 @@
   &.icon::before {
     margin-right: @icon-pad;
     font-size: @icon-size;
-    vertical-align: middle; // TODO: Why do we need that, shouldn't that be corrected by 2px offset of icons?
+    display: inline;
   }
 }
 
